Refactoring complete de l'architecture, afin d'avoir une organisation compatible